Part of the code is optimized and bugs fixed